K8S/task-4/networkpolicy/pilicy-c.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tenant-c-network-policy
  namespace: tenant-c
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
           matchLabels:
             app: saasify
    - from:
       - podSelector:
           matchLabels:
             app: backend
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
       - podSelector: {}
    - to: 
       - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
